# MultiTurnKernel-SFT

./: .env.example  AGENTS.md  DOCUMENTATION.md  DOCUMENTATION_CORRECTIONS.md  ERROR_ANALYSIS.md  README.md  SETUP_COMMANDS.md  SGLANG_SETUP.md  dataloader.py  help.txt  modal_app.py  multi_turn.md  multi_turn_queue.py  orchestrator.py  pyproject.toml  reasoning_traces_correct.json  requirements.txt  run_glm45_air.sh  run_gpt_oss.sh  serve_qwen3_235b.sh  test_multi_turn.py
inference/: download_lora_from_modal.py  download_lora_vllm.py  serve_trinity.sh  serve_trinity_uv.sh
inference/vllm/: download_lora_vllm.py  pyproject.toml  serve_trinity_uv.sh  test_request.py
sft-reasoning/: README.md  finetune_trinity.py  pyproject.toml
