[project]
name = "kernelbench-triton"
version = "0.1.0"
description = "Triton kernel benchmarking and trace generation for RL training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
    "openai>=1.0.0",
    "modal>=0.56.0",
    "torch>=2.1.0",
    "tqdm>=4.65.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "triton>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
