[project]
name = "sft-reasoning"
version = "0.1.0"
description = "SFT Finetuning for Trinity-Mini on Triton Reasoning Traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.16.0",
    "accelerate>=0.28.0",
    "peft>=0.9.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.42.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16.0"]
flash-attn = ["flash-attn>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
